<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="45sp"
    android:background="@color/background_white_color"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        >
    <TextView 
         android:layout_width="80sp"
    android:layout_height="wrap_content"
    android:text="@string/static_condition_action"
        />
    
   <!-- <Spinner
        android:id="@+id/sn_static_condition_action_illegal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />-->
        <Button
            android:id="@+id/bt_static_condition_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/static_condition_action"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        >
    <TextView 
         android:layout_width="80sp"
    android:layout_height="wrap_content"
    android:text="@string/static_condition_carnumber"
        />
    
    <EditText
        android:id="@+id/et_static_condition_carnumber_illegal"
           android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
        />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        >
    <TextView 
         android:layout_width="80sp"
    android:layout_height="wrap_content"
    android:text="@string/static_condition_starttime"
        />
    
    <Button
        android:id="@+id/bt_static_condition_starttime_illegal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/static_condition_starttime" 
			/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        >
    <TextView 
         android:layout_width="80sp"
    android:layout_height="wrap_content"
    android:text="@string/static_condition_endtime"
        />
    
    <Button
         android:id="@+id/bt_static_condition_endtime_illegal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/static_condition_endtime" />

    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        >
    <TextView 
         android:layout_width="80sp"
    android:layout_height="wrap_content"
    android:text="@string/static_condition_upload"
        />
    
    <Spinner 
        android:id="@+id/sn_static_condition_upload_illegal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    </LinearLayout>
    
    
    
    
    <Button 
        android:id="@+id/bt_choose_condition_illegal"
		 android:layout_width="match_parent"
         android:layout_height="40sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/btn_bg_red"
        android:gravity="center"
        android:textColor="@color/color_white"
    android:text="@string/button_select"
        />
    

</LinearLayout>
